--- a/RabbitGame/RabbitGame.csproj
+++ b/RabbitGame/RabbitGame.csproj
@@ -319,8 +319,10 @@
     <Compile Include="Assets\Script\NextBoard.cs" />
     <Compile Include="Assets\Script\Prop\BigBall.cs" />
     <Compile Include="Assets\Script\Prop\CopyBall.cs" />
+    <Compile Include="Assets\Script\rabbitBtn\propBtn.cs" />
     <Compile Include="Assets\Script\rabbitBtn\Rabbit.cs" />
     <Compile Include="Assets\Script\rabbitBtn\RabitBtn.cs" />
+    <Compile Include="Assets\Script\Rocket.cs" />
     <Compile Include="Assets\Script\Task.cs" />
     <Compile Include="Assets\Script\UITask.cs" />
   </ItemGroup>
